# quasi-newton-unimontes

./: .gitignore  LICENSE  README.md
backend/: main.py  pyproject.toml  routes.py
backend/algorithm/: interface.py  optimization_result.json  pyproject.toml
backend/algorithm/core/: convergence.py  line_search.py  quasi_newton.py
backend/algorithm/problems/: objective_functions.py
backend/algorithm/src/nonlinear_optimization/: __init__.py  __main__.py  functions.py  methods.py
backend/algorithm/src/nonlinear_optimization/utils/: __init__.py  calculations.py
backend/src/optimizer/: __main__.py  functions.py  methods.py  optimization_result.json
design/: README.md  tokens.css
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  styles.css
frontend/src/components/: ConvergenceChart.vue  ConvergenceTable.vue  SurfaceChart.vue  TrajectoryChart.vue  index.ts
frontend/src/services/: optimizerApi.js
